# anymal-rbprm

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml  pyproject.toml
anymal_rbprm/: __init__.py  anymal.py  anymal_abstract.py  anymal_contact6D.py
data/: package.xml
data/com_inequalities/visual/: LF_HAA_com_constraints.dae  LH_HAA_com_constraints.dae  RF_HAA_com_constraints.dae  RH_HAA_com_constraints.dae
data/meshes/: LFleg_vN_Rom.stl  LHleg_vN_Rom.stl  RFleg_vN_Rom.stl  RHleg_vN_Rom.stl  anymal_all_large_visual.dae  anymal_all_visual.dae  anymal_trunk.stl  anymal_trunk_large.stl
data/meshes/scale09/: RFleg_vN_Rom.stl  RHleg_vN_Rom.stl
data/srdf/: anymal_LFleg_rom.srdf  anymal_LHleg_rom.srdf  anymal_trunk.srdf
data/urdf/: anymal_RFleg_rom.urdf  anymal_RHleg_rom.urdf  anymal_trunk.urdf  anymal_trunk_large.urdf
script/relative_foot_positions/: constants_and_tools.py  gen_and_copy.sh  obj_to_constraints.py  plot_polytopes.py  quaternion.py  reduce.py  relativeFootPositionQuasiFlat.py  run.sh
src/hpp/corbaserver/rbprm/anymal/: robot.py
src/hpp/corbaserver/rbprm/anymal_abstract/: __init__.py  robot.py
src/hpp/corbaserver/rbprm/anymal_contact6D/: __init__.py  robot.py
