<?xml version='1.0'?>
<package format='2'>
    <name>anymal-rbprm</name>
    <version>4.12.0</version>
    <description>Database for anymal robot using hpp-rbprm</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Pierre Fernbach</author>
    <author>Steve Tonneau</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
