<?xml version='1.0'?>
<package format='3'>
    <name>anymal_rbprm</name>
    <version>4.12.0</version>
    <description>Database for anymal robot using hpp-rbprm</description>

    <maintainer email='guilhem.saurel@laas.fr'>Guilhem Saurel</maintainer>
    <license>BSD</license>

    <author>Pierre Fernbach</author>
    <author>Steve Tonneau</author>

    <!-- The following tags are recommended by REP-136 -->
    <exec_depend condition="$ROS_VERSION == 1">catkin</exec_depend>
    <buildtool_depend>cmake</buildtool_depend>
    <export>
        <build_type>cmake</build_type>
    </export>
</package>
