[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel[build]"
]

[project]
description = "Database for anymal robot using hpp-rbprm"
license = "BSD-2-Clause"
name = "anymal-rbprm"
version = "5.0.0"

[tool.cmeel]
has-binaries = false

[tool.ruff]
extend-exclude = ["cmake"]

[tool.ruff.lint]
extend-ignore = ["RUF012"]
extend-select = ["I", "NPY", "RUF", "UP", "W"]

[tool.tomlsort]
all = true
